Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138822

Reusing same ValueAxis in multiple GraphViews results in a crash

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.8.5, 6.9.3, 6.11.0 FF
    • 6.9.1, 6.10.0 Beta3
    • Graphs: 2D
    • None
    • Linux/Wayland, Linux/X11, macOS
    • 818613a0e (dev), 2cca8ce8c (6.10), a88cd69a2 (6.9), baaaf13ba (tqtc/lts-6.8)

      exit app will result core dump.

      when debuging, it will report corrupted double link list, or free(): chunks in smallbin corrupted

      the test code is minimized to reproduce it.

      looks like the root cause is: multiple GraphsView use the same axisX.

      it is not raised every time, but very easy by running script.

      test env: ArchLinux + KDE

        1. Main.qml
          0.5 kB
          niqingliang2003
        2. start.sh
          0.1 kB
          niqingliang2003
        For Gerrit Dashboard: QTBUG-138822
        # Subject Branch Project Status CR V

            oulu_hillbilly Sami Varanka
            niqingliang2003 niqingliang2003
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes