2D: Warn when axis added to multiple graphs

Adding the same axis to multiple graphs is not supported. It will result
to crash since graphsview destructor tries to set axis' associated graph
to nullptr.

Fixes: QTBUG-138822
Pick-to: 6.9 6.8
Change-Id: If306e415f87f2366ae0d82f6fd5c9a9a5e356f85
Reviewed-by: Kaj Grönholm <kaj.gronholm@qt.io>
Reviewed-by: Alexei Cazacov <alexei.cazacov@qt.io>
(cherry picked from commit 818613a0ee286cc5a15e98ab055772b52a895b2d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>